Overflow fix

--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -2,7 +2,7 @@
     background-color: #b6aeae40;
     margin: 3rem 2rem;
     position: relative;
-    width: calc(100%-4rem);
+    width: calc(100% - 10rem);
     height: 75vh;
     padding: 0 3rem;
     border-radius: 1rem;
